[package]
name = "clisearch"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A CLI tool for google searching"
repository = "https://github.com/Nelliguns/clisearch"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.15.0"
